Fixed dependency on dev enviorments. Fixed gradle distro build.